--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "pg-promise": "^11.9.1"
   },
   "devDependencies": {
