--- a/client/package.json
+++ b/client/package.json
@@ -18,24 +18,25 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.13.0",
     "@mui/styled-engine": "5.12.3",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
     "ag-grid-community": "^32.2.0",
     "ag-grid-react": "^32.2.0",
     "ajv": "^8.17.1",
+    "axios": "^1.7.7",
+    "chart.js": "3.9.1",
+    "chroma-js": "2.4.2",
+    "luxon": "^3.5.0",
+    "prop-types": "15.8.1",
     "react": ">=16.8.0",
     "react-countup": "6.4.2",
     "react-dom": ">=16.8.0",
+    "react-flatpickr": "3.10.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "axios": "^1.7.7",
-    "chart.js": "3.9.1",
-    "chroma-js": "2.4.2",
-    "prop-types": "15.8.1",
-    "react-flatpickr": "3.10.13",
     "uuid": "9.0.0",
     "web-vitals": "3.3.1"
   },
